--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "private": true,
   "scripts": {
     "dev": "concurrently \"vue-cli-service serve --port 3000\" \"nodemon server.js\"",
-    "serve": "concurrently \"npx http-server dist\" \"node server.js\"",
+    "serve": "concurrently \"http-server dist\" \"node server.js\"",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint  --fix --ext .js,.vue ."
   },
   "dependencies": {
     "@meforma/vue-toaster": "^1.3.0",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "vuex": "^4.0.0",
-    "vue-debounce": "^4.0.0"
+    "vue-debounce": "^4.0.0",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -29,18 +29,19 @@
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
     "babel-jest": "^27.0.6",
+    "body-parser": "^1.20.0",
+    "concurrently": "^7.2.2",
+    "cors": "^2.8.5",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
-    "jest": "^27.0.5",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0",
-    "body-parser": "^1.20.0",
-    "concurrently": "^7.2.2",
-    "cors": "^2.8.5",
     "express": "^4.18.1",
-    "nodemon": "^2.0.18"
+    "http-server": "^14.1.1",
+    "jest": "^27.0.5",
+    "nodemon": "^2.0.18",
+    "sass": "^1.32.7",
+    "sass-loader": "^12.0.0"
   }
 }
