--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "^4.18.1",
     "http-server": "^14.1.1",
     "jest": "^27.0.5",
+    "jest-serializer-vue": "^2.0.2",
     "nodemon": "^2.0.18",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0"
